--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Lifez About "RAIYAN"</title>
+        <link rel="stylesheet" href="styles.css">
+      <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRYuFJwbvu6nG__xwEDje5Z5_gHOMqV3mrpJw&usqp=CAU" type="image/icon type">
     </head>
     <body>
       <p><a href="mailto:webmaster@example.com" target="_blank">Rayan Hyder</a></p> 
