Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html> <html><head>
         <title>Lifez About "RAIYAN"</title>
+        <link rel="stylesheet" href="styles.css">
+      <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRYuFJwbvu6nG__xwEDje5Z5_gHOMqV3mrpJw&amp;usqp=CAU" type="image/icon type">
     <style>title{ color: red; font: 12px tahoma;}
 body{
   background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT3qn5Fs-FZQxw5Vzcu6vM74QD85fP8YckYwQ&usqp=CAU');  
